# uht-tooling-packaged

./: .gitignore  GUI_README.md  README.md  pyproject.toml  setup.sh
scripts/: generate_ep_library_explainer_gif.py  generate_mutation_caller_explainer_gif.py  generate_profile_inserts_explainer_gif.py  generate_pullout_index_table.py  generate_ssm_profiler_explainer_gif.py  generate_synthetic_gene_pool_explainer_gif.py  generate_umi_hunter_explainer_gif.py
src/uht_tooling/: cli.py  config.py  tools.py
src/uht_tooling/web/: __init__.py  app.py  components.py  theme.py
src/uht_tooling/web/pages/: __init__.py  enrich_monitor.py  ep_library.py  gene_oligos.py  gibson.py  kld.py  mutation_caller.py  nextera.py  profile_inserts.py  slim.py  ssm_profiler.py  synthetic_genes.py  umi_hunter.py
src/uht_tooling/workflows/: design_gene_oligos.py  design_kld.py  design_slim.py  design_synthetic_gene_pool.py  enrich_monitor.py  gui.py  mut_rate.py  mutation_caller.py  profile_inserts.py  ssm_profiler.py  umi_hunter.py
tests/: test_design_gene_oligos.py  test_design_kld.py  test_design_synthetic_gene_pool.py  test_mutation_caller.py  test_ssm_profiler.py
